--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.0.0
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -44,8 +45,23 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+  fonts:
+    - family: Regular
+      fonts:
+        - asset: assets/fonts/ubuntu-regular.ttf
+    - family: Light
+      fonts:
+        - asset: assets/fonts/ubuntu-light.ttf
+    - family: Italic
+      fonts:
+        - asset: assets/fonts/ubuntu-italic.ttf
+    - family: Bold-Italic
+      fonts:
+        - asset: assets/fonts/ubuntu-bold-italic.ttf
+    - family: Bold
+      fonts:
+        - asset: assets/fonts/ubuntu-bold.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
