--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.0.0
   carousel_slider: ^3.0.0
+  dio: ^4.0.0
+  json_annotation: ^4.0.1
+  rxdart: ^0.27.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
+  build_runner: ^1.10.7
+  json_serializable: ^4.1.3
   flutter_test:
     sdk: flutter
 
