--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   json_annotation: ^4.0.1
   rxdart: ^0.27.1
   shared_preferences: ^2.0.6
+  image_picker: ^0.8.0+3
 
 dev_dependencies:
   build_runner: ^1.10.7
