--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
+    - assets/fonts/
 
   fonts:
     - family: Regular
