--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   rxdart: ^0.27.1
   shared_preferences: ^2.0.6
   image_picker: ^0.8.0+3
+  mime: ^1.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   build_runner: ^1.10.7
