--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: ^0.8.0+3
   mime: ^1.0.0
   intl: ^0.17.0
+  pdf: ^3.4.2
+  responsive_table: ^0.1.1+8
 
 dev_dependencies:
   build_runner: ^1.10.7
